# perceptronium

./: .gitignore  .zenodo.json  CITATION.cff  README.md
.github/workflows/: docs.yml  unit-tests.yml
data/: README.md  XDATCAR_ch4_ht  XDATCAR_ch4_lt  XDATCAR_ethane_ht  XDATCAR_ethane_lt  XDATCAR_ethylene_ht  XDATCAR_ethylene_lt  XDATEN_ch4_ht  XDATEN_ch4_lt  XDATEN_ethane_ht  XDATEN_ethane_lt  XDATEN_ethylene_ht  XDATEN_ethylene_lt  request
docs/source/: conf.py  getting_started.rst  index.rst  symmetry_functions.rst  tutorials.rst  usage.rst
docs/source/_static/img/: .gitignore
pysrc/: README.md  collect.py  pack.py  pos2dat.py  vis.py  xdatcar2data.py  xdatcar2pack.py
src/: CMakeLists.txt  atomlist.cpp  atomlist.h  config.h.in  data_entry.h  datafile.cpp  datafile.h  datafile_parser.cpp  datafile_parser.h  floats.h  main.cpp  npzwriter.cpp  npzwriter.h  progress.cpp  progress.h  requestfile.cpp  requestfile.h
src/cmake/modules/: FindCPPUNIT.cmake
src/test/: CMakeLists.txt  test_datafile_parser.cpp  test_datafile_parser.h  test_parser.cpp  test_parser.h  test_requestfile.cpp  test_requestfile.h  unittest.cpp
src/test/testinput/: ch4.pkg  request_invalid_rows  request_unsorted_valid  struc_00001.data  struc_00100.data
torch/: README.md  opt_ch4.py  opt_h2.py  train_ch4.py  train_ch4_accurate.py  train_ch4_short_test.py
torch/perceptronium/: __init__.py  dataset.py  fitter.py  network.py  symmetryfunctioncalculator.py
visualization/: README.md  coeff.py  combine.py  movie.sh  networkpicture.py  trajectory.py
